Ajuste de fotos y descripciones

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="card" data-id="producto1">
       <h4>Remera Negra Clásica</h4>
       <div class="img-container">
-        <img src="img/RemeraNegra.jpg" alt="Producto 1" class="product-image">
+        <img src="img/RemeNegraSol.jpg" alt="Producto 1" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
       </div>
@@ -43,7 +43,7 @@
     <div class="card" data-id="producto2">
       <h4>Remera Beige Clásica</h4>
       <div class="img-container">
-        <img src="img/RemeraBeige.jpg" alt="Producto 2" class="product-image">
+        <img src="img/RemeBeigeSol.jpg" alt="Producto 2" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
       </div>
@@ -53,7 +53,7 @@
     <div class="card" data-id="producto3">
       <h4>Remera Todo Negro</h4>
       <div class="img-container">
-        <img src="img/RemeraNegra2.jpg" alt="Producto 3" class="product-image">
+        <img src="img/RemeNegraSol2.jpg" alt="Producto 3" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
       </div>
@@ -63,7 +63,7 @@
     <div class="card" data-id="producto4">
       <h4>Buzo Blanco Clasico</h4>
       <div class="img-container">
-        <img src="img/BuzoBlanco.jpg" alt="Producto 4" class="product-image">
+        <img src="img/BuzoBlancoSol.jpg" alt="Producto 4" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
       </div>
@@ -73,7 +73,7 @@
     <div class="card" data-id="producto5">
       <h4>Remera Blanca Clasica</h4>
       <div class="img-container">
-        <img src="img/Remera2.jpg" alt="Producto 5" class="product-image">
+        <img src="img/RemeBlancaSol.jpg" alt="Producto 5" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
       </div>
@@ -81,9 +81,9 @@
     </div>
 
     <div class="card" data-id="producto6">
-      <h4>Remera Negra Basica</h4>
+      <h4>Remera Negra Clasica</h4>
       <div class="img-container">
-        <img src="img/RemeraNegraEscudo.jpg" alt="Producto 6" class="product-image">
+        <img src="img/RemeNegraEscudo.jpg" alt="Producto 6" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
       </div>
@@ -91,16 +91,16 @@
     </div>
 
     <div class="card" data-id="producto7">
-      <h4>Remera Beige Blasica</h4>
+      <h4>Remera Beige Clasica</h4>
       <div class="img-container">
-        <img src="img/RemeraBeigeEscudo.jpg" alt="Producto 6" class="product-image">
+        <img src="img/RemeBeigeEscudo.jpg" alt="Producto 6" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
       </div>
       <h4>Remera beige con bordado escudo nacional</h4>
     </div>
 
-      ><script>
+      <script>
             const toggle = document.getElementById("menu-toggle");
     const nav = document.getElementById("nav-links");
     toggle.addEventListener("click", () => {
@@ -108,13 +108,13 @@
     });
 
     const galeria = {
-      producto1: ["img/RemeraNegra.jpg", "img/ZoomRemeraNegra.jpg"],
-      producto2: ["img/RemeraBeige.jpg", "img/ZoomRemeraBeige.jpg"],
-      producto3: ["img/RemeraNegra2.jpg", "img/ZoomRemeraNegra.jpg"],
-      producto4: ["img/BuzoBlanco.jpg", "img/ZoomBuzoBlanco.jpg"],
-      producto5: ["img/Remera2.jpg", "img/ZoomRemera2.jpg"],
-      producto6: ["img/RemeraNegraEscudo.jpg", "img/RemeraNegraEscudo2.jpg"],
-      producto7: ["img/RemeraBeigeEscudo2.jpg", "img/RemeraBeigeEscudo.jpg"]
+      producto1: ["img/RemeNegraSol.jpg", "img/ZRNegraSol.jpg"],
+      producto2: ["img/RemeBeigeSol.jpg", "img/ZRBeigeSol.jpg"],
+      producto3: ["img/RemeNegraSol2.jpg", "img/ZRNegraSol2.jpg"],
+      producto4: ["img/BuzoBlancoSol.jpg", "img/ZBBlancoSol.jpg"],
+      producto5: ["img/RemeBlancaSol.jpg", "img/ZRBlancaSol.jpg"],
+      producto6: ["img/RemeNegraEscudo.jpg","img/ZRNegraEscudo.jpg"],
+      producto7: ["img/RemeBeigeEscudo.jpg", "img/ZRBeigeEscudo.jpg"],
     };
 
     document.querySelectorAll('.card').forEach((card) => {
