--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <a href="https://wa.me/5493424456226" target="_blank" class="whatsapp-boton">
-  <img src="img/logowsp.jpg" alt="WhatsApp">
+  <img src="img/logowsp.png" alt="WhatsApp">
 </a>
 <body>
   <header class="navbar">
@@ -17,7 +17,9 @@
     <nav class="nav-links" id="nav-links">
       <a href="#">Inicio</a>
       <a href="#">Galería</a>
-      <a href="#">Contacto</a>
+      <a href="https://instagram.com/tramoya.sf" target="_blank" rel="noopener">
+  <i class="fab fa-instagram"></i>
+</a>
     </nav>
   </header>
 
@@ -159,6 +161,9 @@
       </script>
 
       
+<footer>
+  <p>&copy; 2025 TRAMOYA.SF - Todos los derechos reservados</p>
+</footer>
 </body>
 </html>
 
