--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>TRAMOYA.SF</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
 </head>
 <a href="https://wa.me/5493424456226" target="_blank" class="whatsapp-boton">
   <img src="img/logowsp.png" alt="WhatsApp">
@@ -40,6 +42,7 @@
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
       </div>
       <h4>Remera negra con bordado Sol de Mayo en color dorado</h4>
+      <p class="precio">$29.999</p>
     </div>
 
     <div class="card" data-id="producto2">
@@ -50,6 +53,7 @@
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
       </div>
       <h4>Remera beige con bordado Sol de Mayo en color blanco</h4>
+      <p class="precio">$29.999</p>
     </div>
 
     <div class="card" data-id="producto3">
@@ -60,6 +64,7 @@
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
       </div>
       <h4>Remera negra con bordado Sol de Mayo en color negro</h4>
+      <p class="precio">$29.999</p>
     </div>
 
     <div class="card" data-id="producto4">
@@ -70,6 +75,7 @@
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
       </div>
       <h4>Buzo blanco con bordado Sol de Mayo en color dorado</h4>
+      <p class="precio">$49.999</p>
     </div>
 
     <div class="card" data-id="producto5">
@@ -80,6 +86,7 @@
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
       </div>
       <h4>Remera blanca con bordado Sol de Mayo en color dorado</h4>
+      <p class="precio">$29.999</p>
     </div>
 
     <div class="card" data-id="producto6">
@@ -90,6 +97,7 @@
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
       </div>
       <h4>Remera negra con bordado escudo nacional</h4>
+      <p class="precio">$29.999</p>
     </div>
 
     <div class="card" data-id="producto7">
@@ -100,6 +108,7 @@
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
       </div>
       <h4>Remera beige con bordado escudo nacional</h4>
+      <p class="precio">$29.999</p>
     </div>
 
       <script>
