cambios varios, agotado,mejoras visuales,etc

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button class="menu-toggle" id="menu-toggle">&#9776;</button>
 <nav class="nav-links" id="nav-links">
   <a href="index.html">Inicio</a>
-  <a href="#">Galería</a>
+  <a href="#">Nosotros</a>
 
 <div class="dropdown">
   <button class="dropbtn">Indumentaria</button>
@@ -57,67 +57,74 @@
 </section>
 
   <main class="contenedor">
-    <div class="card remeras negro" data-id="producto1">
+    <div class="card remeras negro agotado" data-id="producto1">
       <h4>Remera Negra Clásica</h4>
       <div class="img-container">
         <img src="img/RemeNegraSol.jpg" alt="Producto 1" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <span class="etiqueta-agotado">Agotado</span>
       </div>
       <h4>Remera negra con bordado Sol de Mayo en color dorado</h4>
       <p class="precio">$30.000</p>
     </div>
 
-    <div class="card remeras beige" data-id="producto2">
-      <h4>Remera Beige Clásica</h4>
-      <div class="img-container">
-        <img src="img/RemeBeigeSol.jpg" alt="Producto 2" class="product-image">
-        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
-      </div>
-      <h4>Remera beige con bordado Sol de Mayo en color blanco</h4>
-      <p class="precio">$30.000</p>
-    </div>
+<div class="card remeras beige agotado" data-id="producto2">
+  <h4>Remera Beige Clásica</h4>
+  <div class="img-container">
+    <img src="img/RemeBeigeSol.jpg" alt="Producto 2" class="product-image">
+    <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+    <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+    <span class="etiqueta-agotado">Agotado</span>
+  </div>
+  <h4>Remera beige con bordado Sol de Mayo en color blanco</h4>
+  <p class="precio">$30.000</p>
+</div>
 
-    <div class="card buzos beige" data-id="producto3">
+
+    <div class="card buzos beige agotado" data-id="producto3">
       <h4>Buzo Beige Clasico</h4>
       <div class="img-container">
         <img src="img/BuzoBeigeEscudo.jpg" alt="Producto 3" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <span class="etiqueta-agotado">Agotado</span>
       </div>
       <h4>Buzo Beige con bordado Escudo Nacional</h4>
       <p class="precio">$50.000</p>
     </div>
 
-    <div class="card buzos blanco" data-id="producto4">
+    <div class="card buzos blanco agotado" data-id="producto4">
       <h4>Buzo Blanco Clasico</h4>
       <div class="img-container">
         <img src="img/BuzoBlancoSol.jpg" alt="Producto 4" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <span class="etiqueta-agotado">Agotado</span>
       </div>
       <h4>Buzo blanco con bordado Sol de Mayo en color dorado</h4>
       <p class="precio">$50.000</p>
     </div>
 
-    <div class="card remeras blanco" data-id="producto5">
+    <div class="card remeras blanco agotado" data-id="producto5">
       <h4>Remera Blanca Clasica</h4>
       <div class="img-container">
         <img src="img/RemeBlancaSol.jpg" alt="Producto 5" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <span class="etiqueta-agotado">Agotado</span>
       </div>
       <h4>Remera blanca con bordado Sol de Mayo en color dorado</h4>
       <p class="precio">$30.000</p>
     </div>
 
-    <div class="card remeras negro" data-id="producto6">
+    <div class="card remeras negro agotado" data-id="producto6">
       <h4>Remera Negra Clasica</h4>
       <div class="img-container">
         <img src="img/RemeNegraEscudo.jpg" alt="Producto 6" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <span class="etiqueta-agotado">Agotado</span>
       </div>
       <h4>Remera negra con bordado escudo nacional</h4>
       <p class="precio">$30.000</p>
