--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </a>
 <body>
   <header class="navbar">
-    <div class="logo">TRAMOYA</div>
+      <a href="index.html"><div class="logo">TRAMOYA</div></a>
     <button class="menu-toggle" id="menu-toggle">&#9776;</button>
 <nav class="nav-links" id="nav-links">
   <a href="index.html">Inicio</a>
-  <a href="#">Nosotros</a>
+<!--   <a href="#">Nosotros</a> -->
 
 <div class="dropdown">
   <button class="dropbtn">Indumentaria</button>
@@ -37,6 +37,9 @@
         <a href="#" onclick="filtrarColor('blanco', 'remeras')">Blanco</a>
         <a href="#" onclick="filtrarColor('negro', 'remeras')">Negro</a>
         <a href="#" onclick="filtrarColor('beige', 'remeras')">Beige</a>
+        <a href="#" onclick="filtrarColor('marron', 'remeras')">Marron</a>
+        <a href="#" onclick="filtrarColor('azul', 'remeras')">Azul</a>
+        <a href="#" onclick="filtrarColor('gris', 'remeras')">Gris</a>
       </div>
     </div>
   </div>
@@ -57,103 +60,191 @@
 </section>
 
   <main class="contenedor">
-    <div class="card remeras negro agotado" data-id="producto1">
-      <h4>Remera Negra Clásica</h4>
+
+<div class="card remeras negro" data-id="producto1">
+    <h4>Remera Negra Clásica</h4>
       <div class="img-container">
-        <img src="img/RemeNegraSol.jpg" alt="Producto 1" class="product-image">
+        <img src="imgremeras/RemeNegraSol.jpg" alt="Producto 1" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
-        <span class="etiqueta-agotado">Agotado</span>
+        <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
-      <h4>Remera negra con bordado Sol de Mayo en color dorado</h4>
-      <p class="precio">$30.000</p>
-    </div>
+    <h4>Remera negra con bordado Sol de Mayo en color dorado</h4>
+<p class="precio">$32.000</p>
+</div>
 
-<div class="card remeras beige agotado" data-id="producto2">
-  <h4>Remera Beige Clásica</h4>
-  <div class="img-container">
-    <img src="img/RemeBeigeSol.jpg" alt="Producto 2" class="product-image">
-    <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-    <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
-    <span class="etiqueta-agotado">Agotado</span>
-  </div>
-  <h4>Remera beige con bordado Sol de Mayo en color blanco</h4>
-  <p class="precio">$30.000</p>
+<div class="card remeras beige" data-id="producto2">
+    <h4>Remera Beige Clásica</h4>
+      <div class="img-container">
+        <img src="imgremeras/RemeBeigeSol.jpg" alt="Producto 2" class="product-image">
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+      </div>
+    <h4>Remera beige con bordado Sol de Mayo en color dorado</h4>
+<p class="precio">$32.000</p>
+</div>
+
+<div class="card buzos beige" data-id="producto3">
+    <h4>Buzo Beige Clasico</h4>
+      <div class="img-container">
+        <img src="imgbuzos/BuzoBeigeEscudo.jpg" alt="Producto 3" class="product-image">
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+      </div>
+    <h4>Buzo Beige con bordado Escudo Nacional</h4>
+<p class="precio">$50.000</p>
+</div>
+
+<div class="card buzos blanco" data-id="producto4">
+    <h4>Buzo Blanco Clasico</h4>
+      <div class="img-container">
+        <img src="imgbuzos/BuzoBlancoSol.jpg" alt="Producto 4" class="product-image">
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+      </div>
+    <h4>Buzo blanco con bordado Sol de Mayo en color dorado</h4>
+<p class="precio">$50.000</p>
+</div>
+
+<div class="card remeras blanco" data-id="producto5">
+    <h4>Remera Blanca Clasica</h4>
+      <div class="img-container">
+        <img src="imgremeras/RemeBlancaSol.jpg" alt="Producto 5" class="product-image">
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+      </div>
+    <h4>Remera blanca con bordado Sol de Mayo en color dorado</h4>
+<p class="precio">$32.000</p>
+</div>
+
+<div class="card remeras negro" data-id="producto6">
+    <h4>Remera Negra Clasica</h4>
+      <div class="img-container">
+        <img src="imgremeras/RemeNegraEscudo.jpg" alt="Producto 6" class="product-image">
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+      </div>
+    <h4>Remera negra con bordado escudo nacional</h4>
+<p class="precio">$32.000</p>
+</div>
+
+<div class="card remeras beige" data-id="producto7">
+    <h4>Remera Beige Clasica</h4>
+      <div class="img-container">
+        <img src="imgremeras/RemeBeigeEscudo.JPG" alt="Producto 7" class="product-image">
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+      </div>
+    <h4>Remera beige con bordado escudo nacional</h4>
+<p class="precio">$32.000</p>
+</div>
+
+<div class="card buzos beige" data-id="producto8">
+    <h4>Buzo Beige Clasico</h4>
+      <div class="img-container">
+        <img src="imgbuzos/BuzoBeigeSol.jpg" alt="Producto 8" class="product-image">
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+      </div>
+    <h4>Buzo Beige con bordado Sol de Mayo en color dorado</h4>
+<p class="precio">$50.000</p>
+</div>
+
+<div class="card remeras marron" data-id="producto9">
+    <h4>Remera Marron Clásica</h4>
+      <div class="img-container">
+        <img src="imgremeras/RemeMarronSol.jpg" alt="Producto 9" class="product-image">
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+      </div>
+    <h4>Remera marron con bordado Sol de Mayo en color dorado</h4>
+<p class="precio">$32.000</p>
+</div>
+
+<div class="card remeras azul" data-id="producto10">
+    <h4>Remera Azul Clásica</h4>
+      <div class="img-container">
+        <img src="imgremeras/RemeAzulBandera.jpg" alt="Producto 10" class="product-image">
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+      </div>
+    <h4>Remera Azul con bordado Bandera Argentina</h4>
+<p class="precio">$32.000</p>
+</div>
+
+<div class="card remeras blanco" data-id="producto11">
+    <h4>Remera Blanca Clásica</h4>
+      <div class="img-container">
+        <img src="imgremeras/RemeBlancaBandera.jpg" alt="Producto 11" class="product-image">
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+      </div>
+    <h4>Remera Blanca con bordado Bandera Argentina</h4>
+<p class="precio">$32.000</p>
+</div>
+
+<div class="card remeras negro" data-id="producto12">
+    <h4>Remera Negra Clásica</h4>
+      <div class="img-container">
+        <img src="imgremeras/RemeNegraBandera.jpg" alt="Producto 12" class="product-image">
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+      </div>
+    <h4>Remera Negra con bordado Bandera Argentina</h4>
+<p class="precio">$32.000</p>
+</div>
+
+<div class="card remeras blanco" data-id="producto13">
+    <h4>Remera Blanca Clásica</h4>
+      <div class="img-container">
+        <img src="imgremeras/RemeBlancaSolN.jpg" alt="Producto 13" class="product-image">
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+      </div>
+    <h4>Remera Blanca con bordado Sol de Mayo negro</h4>
+<p class="precio">$32.000</p>
+</div>
+
+<div class="card remeras gris" data-id="producto14">
+    <h4>Remera Gris Clásica</h4>
+      <div class="img-container">
+        <img src="imgremeras/RemeGrisSol.jpg" alt="Producto 14" class="product-image">
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+      </div>
+    <h4>Remera Gris con bordado Sol de Mayo plateado</h4>
+<p class="precio">$32.000</p>
+</div>
+
+<div class="card remeras azul" data-id="producto15">
+    <h4>Remera Azul Clásica</h4>
+      <div class="img-container">
+        <img src="imgremeras/RemeAzulSol.jpg" alt="Producto 15" class="product-image">
+        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
+        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
+        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+      </div>
+    <h4>Remera Azul con bordado Sol de Mayo dorado</h4>
+<p class="precio">$32.000</p>
 </div>
 
 
-    <div class="card buzos beige agotado" data-id="producto3">
-      <h4>Buzo Beige Clasico</h4>
-      <div class="img-container">
-        <img src="img/BuzoBeigeEscudo.jpg" alt="Producto 3" class="product-image">
-        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
-        <span class="etiqueta-agotado">Agotado</span>
-      </div>
-      <h4>Buzo Beige con bordado Escudo Nacional</h4>
-      <p class="precio">$50.000</p>
-    </div>
-
-    <div class="card buzos blanco agotado" data-id="producto4">
-      <h4>Buzo Blanco Clasico</h4>
-      <div class="img-container">
-        <img src="img/BuzoBlancoSol.jpg" alt="Producto 4" class="product-image">
-        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
-        <span class="etiqueta-agotado">Agotado</span>
-      </div>
-      <h4>Buzo blanco con bordado Sol de Mayo en color dorado</h4>
-      <p class="precio">$50.000</p>
-    </div>
-
-    <div class="card remeras blanco agotado" data-id="producto5">
-      <h4>Remera Blanca Clasica</h4>
-      <div class="img-container">
-        <img src="img/RemeBlancaSol.jpg" alt="Producto 5" class="product-image">
-        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
-        <span class="etiqueta-agotado">Agotado</span>
-      </div>
-      <h4>Remera blanca con bordado Sol de Mayo en color dorado</h4>
-      <p class="precio">$30.000</p>
-    </div>
-
-    <div class="card remeras negro agotado" data-id="producto6">
-      <h4>Remera Negra Clasica</h4>
-      <div class="img-container">
-        <img src="img/RemeNegraEscudo.jpg" alt="Producto 6" class="product-image">
-        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
-        <span class="etiqueta-agotado">Agotado</span>
-      </div>
-      <h4>Remera negra con bordado escudo nacional</h4>
-      <p class="precio">$30.000</p>
-    </div>
-
-    <div class="card remeras beige" data-id="producto7">
-      <h4>Remera Beige Clasica</h4>
-      <div class="img-container">
-        <img src="img/RemeBeigeEscudo.jpg" alt="Producto 6" class="product-image">
-        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
-      </div>
-      <h4>Remera beige con bordado escudo nacional</h4>
-      <p class="precio">$30.000</p>
-    </div>
-    
-        <div class="card buzos beige" data-id="producto8">
-      <h4>Buzo Beige Clasico</h4>
-      <div class="img-container">
-        <img src="img/BuzoBeigeSol.jpg" alt="Producto 6" class="product-image">
-        <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
-        <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
-      </div>
-      <h4>Buzo Beige con bordado Sol de Mayo en color Dorado</h4>
-      <p class="precio">$50.000</p>
-    </div>
-
+</main>
 <footer>
-  <p>&copy; 2025 TRAMOYA.SF - Todos los derechos reservados</p>
+<p>&copy; 2025 TRAMOYA.SF - Todos los derechos reservados</p>
 </footer>
 <script src="js/main.js"></script>
 </body>
