cambios de nombres y blur en agotados

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <main class="contenedor">
 
 <div class="card remeras negro" data-id="producto1">
-    <h4>Remera Negra Clásica</h4>
+    <h4>Remera Negra Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeNegraSol.jpg" alt="Producto 1" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
@@ -74,7 +74,7 @@
 </div>
 
 <div class="card remeras beige" data-id="producto2">
-    <h4>Remera Beige Clásica</h4>
+    <h4>Remera Beige Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeBeigeSol.jpg" alt="Producto 2" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
@@ -85,32 +85,32 @@
 <p class="precio">$32.000</p>
 </div>
 
-<div class="card buzos beige" data-id="producto3">
+<div class="card buzos beige agotado" data-id="producto3">
     <h4>Buzo Beige Clasico</h4>
       <div class="img-container">
         <img src="imgbuzos/BuzoBeigeEscudo.jpg" alt="Producto 3" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
-        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+        <span class="etiqueta-agotado">Agotado</span>
       </div>
     <h4>Buzo Beige con bordado Escudo Nacional</h4>
 <p class="precio">$50.000</p>
 </div>
 
-<div class="card buzos blanco" data-id="producto4">
+<div class="card buzos blanco agotado" data-id="producto4">
     <h4>Buzo Blanco Clasico</h4>
       <div class="img-container">
         <img src="imgbuzos/BuzoBlancoSol.jpg" alt="Producto 4" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
-        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+        <span class="etiqueta-agotado">Agotado</span>
       </div>
     <h4>Buzo blanco con bordado Sol de Mayo en color dorado</h4>
 <p class="precio">$50.000</p>
 </div>
 
 <div class="card remeras blanco" data-id="producto5">
-    <h4>Remera Blanca Clasica</h4>
+    <h4>Remera Blanca Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeBlancaSol.jpg" alt="Producto 5" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
@@ -122,7 +122,7 @@
 </div>
 
 <div class="card remeras negro" data-id="producto6">
-    <h4>Remera Negra Clasica</h4>
+    <h4>Remera Negra Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeNegraEscudo.jpg" alt="Producto 6" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
@@ -134,7 +134,7 @@
 </div>
 
 <div class="card remeras beige" data-id="producto7">
-    <h4>Remera Beige Clasica</h4>
+    <h4>Remera Beige Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeBeigeEscudo.JPG" alt="Producto 7" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
@@ -145,20 +145,20 @@
 <p class="precio">$32.000</p>
 </div>
 
-<div class="card buzos beige" data-id="producto8">
+<div class="card buzos beige agotado" data-id="producto8">
     <h4>Buzo Beige Clasico</h4>
       <div class="img-container">
         <img src="imgbuzos/BuzoBeigeSol.jpg" alt="Producto 8" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
-        <!-- <span class="etiqueta-agotado">Agotado</span> -->
+        <span class="etiqueta-agotado">Agotado</span>
       </div>
     <h4>Buzo Beige con bordado Sol de Mayo en color dorado</h4>
 <p class="precio">$50.000</p>
 </div>
 
 <div class="card remeras marron" data-id="producto9">
-    <h4>Remera Marron Clásica</h4>
+    <h4>Remera Marron Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeMarronSol.jpg" alt="Producto 9" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
@@ -170,7 +170,7 @@
 </div>
 
 <div class="card remeras azul" data-id="producto10">
-    <h4>Remera Azul Clásica</h4>
+    <h4>Remera Azul Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeAzulBandera.jpg" alt="Producto 10" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
@@ -182,7 +182,7 @@
 </div>
 
 <div class="card remeras blanco" data-id="producto11">
-    <h4>Remera Blanca Clásica</h4>
+    <h4>Remera Blanca Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeBlancaBandera.jpg" alt="Producto 11" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
@@ -194,7 +194,7 @@
 </div>
 
 <div class="card remeras negro" data-id="producto12">
-    <h4>Remera Negra Clásica</h4>
+    <h4>Remera Negra Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeNegraBandera.jpg" alt="Producto 12" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
@@ -206,7 +206,7 @@
 </div>
 
 <div class="card remeras blanco" data-id="producto13">
-    <h4>Remera Blanca Clásica</h4>
+    <h4>Remera Blanca Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeBlancaSolN.jpg" alt="Producto 13" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
@@ -218,19 +218,19 @@
 </div>
 
 <div class="card remeras gris" data-id="producto14">
-    <h4>Remera Gris Clásica</h4>
+    <h4>Remera Gris Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeGrisSol.jpg" alt="Producto 14" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
         <button class="flecha derecha"><i class="fas fa-arrow-right"></i></button>
         <!-- <span class="etiqueta-agotado">Agotado</span> -->
       </div>
-    <h4>Remera Gris con bordado Sol de Mayo plateado</h4>
+    <h4>Remera Gris con bordado Sol de Mayo gris</h4>
 <p class="precio">$32.000</p>
 </div>
 
 <div class="card remeras azul" data-id="producto15">
-    <h4>Remera Azul Clásica</h4>
+    <h4>Remera Azul Oversize</h4>
       <div class="img-container">
         <img src="imgremeras/RemeAzulSol.jpg" alt="Producto 15" class="product-image">
         <button class="flecha izquierda"><i class="fas fa-arrow-left"></i></button>
